--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.jayway.android.robotium:robotium-solo:5.3.1'
     compile 'com.firebase:firebase-client-android:2.2.3+'
     // UI
+    compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.baoyz.pullrefreshlayout:library:1.0.1'
