--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,13 @@ android {
         exclude 'META-INF/LICENSE.txt'
     }
 
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.0"
 
     defaultConfig {
         applicationId "com.joaquimley.byinvitationonly"
-        minSdkVersion 17
-        targetSdkVersion 21
+        minSdkVersion 19
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -48,6 +48,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.jayway.android.robotium:robotium-solo:5.3.1'
     compile 'com.firebase:firebase-client-android:2.2.3+'
+    compile 'com.android.support:appcompat-v7:22.1.1'
     // UI
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.squareup.picasso:picasso:2.5.0'
