--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,22 +23,25 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_acronym"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/CustomMaterialLikeTheme" >
+
         <activity android:name=".activities.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.EditUserDetailsActivity"
             android:label="@string/title_activity_edit_user_details" >
         </activity>
+
         <activity
             android:name=".activities.ParticipantsList"
             android:label="@string/title_activity_participants_list" >
         </activity>
+
     </application>
 
 </manifest>
