--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     }
 
     compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.joaquimley.byinvitationonly"
@@ -49,12 +49,11 @@ dependencies {
     compile 'com.jayway.android.robotium:robotium-solo:5.3.1'
     compile 'com.firebase:firebase-client-android:2.2.3+'
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
     // UI
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.squareup.picasso:picasso:2.5.0'
-    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.baoyz.pullrefreshlayout:library:1.0.1'
-    compile 'com.github.medyo:fancybuttons:1.0@aar'
     // ORMLite
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.j256.ormlite:ormlite-jdbc:4.48'
