--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- WARNING: Needed for testing with robotium, remove before going to production -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -31,17 +33,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.EditUserDetailsActivity"
             android:label="@string/title_activity_edit_user_details" >
         </activity>
-
         <activity
-            android:name=".activities.ParticipantsList"
+            android:name=".activities.ParticipantsListActivity"
             android:label="@string/title_activity_participants_list" >
         </activity>
-
+        <activity
+            android:name=".activities.BookmarksListActivity"
+            android:label="@string/title_activity_bookmarked_list" >
+        </activity>
+        <activity
+            android:name=".activities.SessionsListActivity"
+            android:label="@string/title_activity_bookmarked_list" >
+        </activity>
     </application>
 
 </manifest>
