--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,13 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- WARNING: Needed for testing with robotium, remove before going to production -->
+    <!-- WARNING: Needed for testing with robotium, remove before going into production -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name_acronym"
+        android:label="@string/app_acronym"
         android:theme="@style/CustomMaterialLikeTheme" >
 
         <activity android:name=".activities.MainActivity" >
