--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     // UI
+    compile 'com.afollestad:material-dialogs:0.7.4.1'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.baoyz.pullrefreshlayout:library:1.0.1'
