--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: android
+env:
+  matrix:
+    - ANDROID_SDKS=android-22,sysimg-22 ANDROID_TARGET=android-22 ANDROID_ABI=armeabi-v7a
+
 android:
   components:
     # Uncomment the lines below if you want to
@@ -23,17 +27,26 @@ android:
     - sys-img-armeabi-v7a-android-22
     - sys-img-x86-android-22
 
-  notifications:email: false
+notifications:
+  email: false
 
-  before_install:
+before_script:
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
 
-      # for gradle output style
-      - export TERM=dumb
 
-      # environment info
-      - ./gradlew -v
-      - uname -a
-
-  # Let's try to build...
-  script: ./gradlew clean build
-  script: ./gradlew connectedAndroidTest
+#  before_install:
+#
+#      # for gradle output style
+#      - export TERM=dumb
+#
+#      # environment info
+#      - ./gradlew -v
+#      - uname -a
+#
+#  # Let's try to build...
+#  script: ./gradlew clean build
+#  script: ./gradlew connectedAndroidTest
