--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,15 @@ android:
 notifications:
   email: false
 
-before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-device
-  - adb shell input keyevent 82 &
+script:
+  "./gradlew build"
+
+#before_script:
+#  # Create and start emulator
+#  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+#  - emulator -avd test -no-skin -no-audio -no-window &
+#  - adb wait-for-device
+#  - adb shell input keyevent 82 &
 
 
 #  before_install:
