Travis unix hotfix 5

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,10 @@ android:
 notifications:
   email: false
 
+before_install:
+  - cd application
+  - chmod +x gradlew
+
 script:
   "./gradlew build"
 
